--- a/BestStore.Web/Views/Shared/_Layout.cshtml
+++ b/BestStore.Web/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
-
+	<partial name="_CartCookieScriptPartial" />
 	<header>
 		@await Html.PartialAsync("_NavPartial")
 	</header>
