--- a/BestStore.Web/Views/_ViewImports.cshtml
+++ b/BestStore.Web/Views/_ViewImports.cshtml
@@ -5,4 +5,6 @@
 @using Microsoft.AspNetCore.Html;
 @using BestStore.Web.Models.ViewModels.User
 @using BestStore.Web.Models.ViewModels.Category
+@using BestStore.Web.Helpers
+@using BestStore.Web.Models.ViewModels.Cart
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
