test and adjust untill work place order by customer functionality then end display orders and details pages of admin for order controller next add pagination and edit order for admin

--- a/BestStore.Web/Views/_ViewImports.cshtml
+++ b/BestStore.Web/Views/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @using BestStore.Web.Models.ViewModels.Category
 @using BestStore.Web.Helpers
 @using BestStore.Web.Models.ViewModels.Cart
+@using BestStore.Web.Models.ViewModels.Order
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
