--- a/BestStore.Web/Views/_ViewImports.cshtml
+++ b/BestStore.Web/Views/_ViewImports.cshtml
@@ -8,4 +8,5 @@
 @using BestStore.Web.Helpers
 @using BestStore.Web.Models.ViewModels.Cart
 @using BestStore.Web.Models.ViewModels.Order
+@using BestStore.Web.Models.ViewModels.Checkout
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
