--- a/BestStore.Web/Views/Cart/Confirm.cshtml
+++ b/BestStore.Web/Views/Cart/Confirm.cshtml
@@ -7,7 +7,7 @@
     @if (TempData["SuccessCartMessage"] != null)
     {
         <div class="alert alert-success" role="alert">@TempData["SuccessCartMessage"]</div>
-        <a class="btn btn-outline-primary" asp-controller="ClientOrders" asp-action="Index">Back</a>
+        <a class="btn btn-outline-primary" asp-controller="Order" asp-action="IndexClient">Back</a>
     }
     else
     {
