--- a/BestStore.Web/Views/Shared/_NavPartial.cshtml
+++ b/BestStore.Web/Views/Shared/_NavPartial.cshtml
@@ -75,7 +75,7 @@
 						</li>
 
 						<li class="nav-item">
-							<a class="nav-link text-dark px-3 py-2 rounded-1" asp-area="" asp-controller="Order" asp-action="MyOrders">
+							<a class="nav-link text-dark px-3 py-2 rounded-1" asp-area="" asp-controller="Order" asp-action="IndexClient">
 								<i class="bi bi-bag-check me-1"></i> My Orders
 							</a>
 						</li>
@@ -111,7 +111,7 @@
 							@if (User.IsInRole("Customer"))
 							{
 								<li>
-									<a class="dropdown-item px-3 py-2 rounded-1" asp-controller="Order" asp-action="MyOrders">
+									<a class="dropdown-item px-3 py-2 rounded-1" asp-controller="Order" asp-action="IndexClient">
 										<i class="bi bi-bag-check me-2"></i> My Orders
 									</a>
 								</li>
