--- a/BestStore.Web/Views/Product/Details.cshtml
+++ b/BestStore.Web/Views/Product/Details.cshtml
@@ -84,25 +84,25 @@
                         </div>
                     </div>
 
+                    @if (Model.StockQuantity > 0)
+                    {
                     <!-- Action Buttons -->
                     <div class="mb-4">
                         <div class="row g-3">
                             <!-- Quantity Selector -->
                             <div class="col-md-4">
                                 <div class="input-group">
-                                    <button class="btn btn-outline-secondary" type="button" onclick="decreaseQuantity()">
+                                    <button class="btn btn-outline-secondary" type="button" onclick="decrease(@Model.Id)">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                                             <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8" />
                                         </svg>
                                     </button>
-                                    <input type="number"
-                                           id="quantityInput"
-                                           class="form-control text-center"
-                                           value="1"
-                                           min="1"
-                                           max="99"
-                                           onchange="validateQuantity()">
-                                    <button class="btn btn-outline-secondary" type="button" onclick="increaseQuantity()">
+                                        <input type="number" id="quantityDetailsInput"
+                                            class="form-control text-center [&::-webkit-inner-spin-button]:appearance-none" 
+                                            min="1" max="99">
+                                   
+                                        
+                                        <button class="btn btn-outline-secondary" type="button" onclick="increase(@Model.Id,@Model.StockQuantity)">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                                             <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4" />
                                         </svg>
@@ -110,19 +110,24 @@
                                 </div>
                             </div>
 
-                            <!-- Add to Cart Button -->
-                            <div class="col-md-4">
-                                <button class="btn btn-success w-100"
-                                        onclick="addToCart(this, @Model.Id)">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4 me-2" viewBox="0 0 16 16">
-                                        <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0" />
-                                    </svg>
-                                    Add to Cart
-                                </button>
-                            </div>
+                                <!-- Add to Cart Button -->
+                                <div class="col-md-4">
+                                    <button class="btn btn-success w-100"
+                                            onclick="addToCart(this, @Model.Id)">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4 me-2" viewBox="0 0 16 16">
+                                            <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0" />
+                                        </svg>
+                                        Add to Cart
+                                    </button>
+                                </div>
                            
                         </div>
                     </div>
+                    }
+                    else
+                    {
+                        <div class="text-danger mb-2">This Product is Out of Stock</div>
+                    }
 
                     <!-- Product Specifications -->
                     <div class="border-top pt-4">
@@ -220,3 +225,20 @@
     }
 </div>
 
+
+<script>
+        document.addEventListener("DOMContentLoaded", function () {
+            console.log("called")
+        const input = document.getElementById("quantityDetailsInput");
+            if (input) {
+                let value = getQuantity(@Model.Id);
+            if(isNaN(value))
+                {
+                    value = 0
+                }
+
+                input.value = value;
+            }
+        });
+
+</script>
