--- a/BestStore.Web/Views/Product/Store.cshtml
+++ b/BestStore.Web/Views/Product/Store.cshtml
@@ -99,7 +99,7 @@
                 </div>
 
                <div class="col-md-2">
-                    <div class="dropdown w-100">
+                    <div class="dropdown w-100" id="store-dropdown">
                         <button class="btn btn-outline-secondary dropdown-toggle w-100"
                                 type="button"
                                 data-bs-toggle="dropdown"
@@ -483,4 +483,8 @@
         min-height: 56px;
     }
     
+      #store-dropdown ul{
+          animation:none
+      }
+
 </style>
