--- a/BestStore.Web/Views/User/Index.cshtml
+++ b/BestStore.Web/Views/User/Index.cshtml
@@ -110,7 +110,7 @@
         </button>
 
         <ul class="dropdown-menu animate__animated animate__fadeIn animate__faster"
-            style="animation-duration: 0.2s;">
+            style="animation:none">
             <li><a class="dropdown-item transition-all" 
                    href="@GetSortUrl("FirstName")"
                    style="transition: all 0.15s ease-in-out;">First Name</a></li>
