--- a/BestStore.Web/Views/Order/IndexClient.cshtml
+++ b/BestStore.Web/Views/Order/IndexClient.cshtml
@@ -92,7 +92,7 @@
                     </button>
 
                     <ul class="dropdown-menu animate__animated animate__fadeIn animate__faster"
-                        style="animation-duration: 0.2s;">
+                        style="animation:none">
                         <li><a class="dropdown-item transition-all" 
                                href="@GetSortUrl("Id")"
                                style="transition: all 0.15s ease-in-out;">Order ID</a></li>
